--- a/Git-GitHub/Git-GitHub.csproj
+++ b/Git-GitHub/Git-GitHub.csproj
@@ -4,6 +4,15 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
     <RootNamespace>Git_GitHub</RootNamespace>
+    <Authors>Jamie Cansdale</Authors>
+    <Company>Mutant Design Limited</Company>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>git-github</ToolCommandName>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
+    <Version>0.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
