--- a/Git-GitHub/Git-GitHub.csproj
+++ b/Git-GitHub/Git-GitHub.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LibGit2Sharp" Version="0.26.1" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="2.4.1" />
     <PackageReference Include="Microsoft.Alm.Authentication" Version="4.3.0" />
     <PackageReference Include="Octokit.GraphQL" Version="0.1.4-beta" />
